omni/tests/goldens/types/undefined_ident_24.err
tests/goldens/types/undefined_ident_24.omni:1:20: error: undefined identifier "missing24"
  let result24:int = missing24
                     ^~~ hint: declare the name before using it
